--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
                 <div style="display: flex;">
                     <div>
                         <img src="./img/myself.jpg" style="height: 150px;">
-                    </div>
-
-                    <div>
                         <h1>Hi! I'm Emily!</h1>
 
 
@@ -75,19 +72,19 @@
                 <div style="display: flex;">
                     <div>
                         <img src="./img/anime_kuroshort.jpg" style="height: 150px;">
-                        <h2>kuro short</h2>
-                        <p>kanari kawaiii</p>
+                        <h2>上目遣い</h2>
+                        <p>かなりかわいい♡</p>
                     </div>
 
                     <div>
                         <img src="./img/anime_yokogao.jpg" style="height: 150px;">
-                        <h2>yokogao</h2>
-                        <p>damnnnnnnnnnn</p>
+                        <h2>黒髪の横顔</h2>
+                        <p>仮面かわゆす</p>
                     </div>
 
                     <div>
                         <img src="./img/anime_makeup.jpg" style="height: 150px;">
-                        <h2>yokogao</h2>
+                        <h2>anime_makeup</h2>
                         <p>damnnnnnnnnnn</p>
                     </div>
 
