added some beautiful fonts

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <title>Emily's Website</title>
         <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./style.css">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Red+Hat+Display&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Hachi+Maru+Pop&family=Kiwi+Maru&family=Klee+One&family=Reenie+Beanie&family=Ubuntu&family=Yusei+Magic&display=swap" rel="stylesheet">
+
     </head>
 
     <body>
