--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Hachi+Maru+Pop&family=Kiwi+Maru&family=Klee+One&family=Reenie+Beanie&family=Ubuntu&family=Yusei+Magic&display=swap" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/de65a87bcb.js" crossorigin="anonymous"></script>
+
     </head>
 
     <body>
@@ -28,6 +30,7 @@
         <!-- Home -->
 
         <section class="home" id="home">
+            <img src="./img/dior_beige.jpg" class="background-image" alt="">
             <div>
                 <img src="./img/myself.jpg">
             </div>
@@ -52,7 +55,7 @@
                     まじ病んでるんだよね〜。病み期マジまんじ。サーシャが嫌うんだけど、なんなん？
                 </p>
                 <p>
-                    まじ病んでるんだよね〜。病み期マジまんじ。サーシャが嫌うんだけど、なんなん？
+                    まじ病んでるんだよね〜。病み期マジまんじ。サーシャが嫌うんだけど、なんなん？アリスは川辺でおねえさんのよこにすわって、なんにもすることがないのでとても退屈（たいくつ）しはじめていました。一、二回はおねえさんの読んでいる本をのぞいてみたけれど、そこには絵も会話もないのです。「絵や会話のない本なんて、なんの役にもたたないじゃないの」とアリスは思いました。そこでアリスは、頭のなかで、ひなぎくのくさりをつくったら楽しいだろうけれど、起きあがってひなぎくをつむのもめんどくさいし、どうしようかと考えていました（といっても、昼間で暑いし、とってもねむくて頭もまわらなかったので、これもたいへんだったのですが）。そこへいきなり、ピンクの目をした白うさぎが近くを走ってきたのです。それだけなら、そんなにめずらしいことでもありませんでした。さらにアリスとしては、そのうさぎが「どうしよう！　どうしよう！　ちこくしちゃうぞ！」とつぶやくのを聞いたときも、それがそんなにへんてこだとは思いませんでした（あとから考えてみたら、これも不思議に思うべきだったのですけれど、でもこのときには、それがごく自然なことに思えたのです）。でもそのうさぎがほんとうに、チョッキのポケットから懐中時計（かいちゅうどけい）をとりだしてそれをながめ、そしてまたあわててかけだしたとき、アリスもとびあがりました。
                 </p>
                 </div>
                 <div>
@@ -65,9 +68,9 @@
 
         <!-- Activities -->
 
-        <section id="activities">
+        <section id="activities" class="activities">
             <h1>Activities</h1>
-            <div>
+            <div class="activities-container">
                 <div>
                     <img src="./img/anime_kuroshort.jpg">
                     <h2>上目遣い</h2>
@@ -92,7 +95,7 @@
 
         <!-- Contact -->
 
-        <section id="contact">
+        <section id="contact" class="contact">
             <div><img src="./img/anime_underwear.JPG"></div>
             <div>
                 <h1>Contact</h1>
@@ -108,7 +111,12 @@
             </div>
         </section>
         
-        <footer></footer>
+        <footer>
+            <a href="https://www.instagram.com/emi_luvsu/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://github.com/Emily-KD"><i class="fa-brands fa-github"></i></a>
+            <a href="linkedin.com/in/emily-kaga-davis-743281205"><i class="fa-brands fa-linkedin"></i></a>
+            <p>201-788-6230 | emi.schemanage@gmail.com</p>
+        </footer>
             
     </body>
     <script></script>
