--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Emily's Website</title>
-        <link rel="stylesheet" href="./style.css">
+        <title>javascript page</title>
+        <link id="pagestyle" rel="stylesheet" href="./style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
